src/tests/testfiles/binary-operators/types-1.txt
Error at 2:7: Comparison operator operands need to be of same type (have int and float)
1 == 2.0;
  ^
